# cpp_cross_demo

./: .gitignore  CMakeLists.txt  Makefile  Makefile_vc  README.md  app  build.gradle  clean_build  clean_build.bat  main.cpp  math.lib  入门示例.cpp
include/: com_example_Main.h  math.h
src/: math_jni.cpp  math_rsa.cpp
